# eleeye

./: .gitignore  CMakeLists.txt
3rd/: CMakeLists.txt
3rd/gtest/: CMakeLists.txt
BOOK/: CMakeLists.txt  MAKEBOOK.CPP
LEAGUE/: CMakeLists.txt  uccileag.cpp
MISC/TEST/: fraction.cpp  genprime.cpp  matrix.h
TEST/: CMakeLists.txt  UCCITEST.INI  maketest.cpp  uccitest.cpp  unittest.cpp
TEST/tests/: test_base.cpp
UCCI2QH/: CMakeLists.txt  qh2ucci.cpp  ucci2qh.cpp
XQFTOOLS/: CMakeLists.txt  MXQFCONV.CPP  ccm2pgn.cpp  che2pgn.cpp  chn2pgn.cpp  mxq2pgn.cpp  pgn2xqf.cpp  xqf2pgn.cpp  xqffile.h
base/: CMakeLists.txt  base.h  base2.h  parse.h  pipe.cpp  pipe.h  rc4prng.h  wsockbas.cpp  wsockbas.h  x86asm.h
cchess/: ADDECCO.CPP  CMakeLists.txt  cchess.cpp  cchess.h  ecco.h  pgnfile.cpp  pgnfile.h
eleeye/: CMakeLists.txt  book.cpp  book.h  eleeye.cpp  evaluate.cpp  genmoves.cpp  hash.cpp  hash.h  movesort.cpp  movesort.h  position.cpp  position.h  preeval.cpp  preeval.h  pregen.cpp  pregen.h  search.cpp  search.h  ucci.cpp  ucci.h
